--- a/index.html
+++ b/index.html
@@ -3,17 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <title>Calculator</title>
-<!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="calculator.css">
-<!--JavaScript-->
 <script type="text/javascript" src="calculator.js"></script>
 </head>
 
 <body>
-<!--Add your HTML here-->
+<div class="box">
+<div class="display"><input type="
+text" readonly size= "18" id= "d"></div>
+<div class="keys">
+<p>
+<input type="button" class=
+"button operator" value="mrc" onclick="alert(' Not yet implemented')">
+
+<input type="button" class=
+"button operator" value="m-" onclick="alert('Not yet implemented')">
+
+<input type="button" class=
+"button operator" value="m+" onclick="alert('Not yet implemented')">
 
 
+</p>
+<p>
+<input type="button" class=
+"button number" value="7" onclick= "v('7')">
 
+<input type="button" class=
+"button operator" value="8" onclick="v('8')">
 
+<input type="button" class=
+"button operator" value="9" onclick="v('9')">
+
+<input type="button" class=
+"button operator" value="*" onclick="v('*')">
+</p>
+<p>
+<input type="button" class=
+"button operator" value="4" onclick="v('4)'">
+
+<input type="button" class=
+"button operator" value="5" onclick="v('5')">
+
+<input type="button" class=
+"button operator" value="6" onclick="v('6')">
+
+<input type="button" class=
+"button operator" value="-" onclick="v('-')">
+</p>
+<p>
+<input type="button" class=
+"button operator" value="1" onclick="v('1')">
+
+<input type="button" class=
+"button operator" value="2" onclick="v('2')">
+
+<input type="button" class=
+"button operator" value="3" onclick="v('3')">
+
+<input type="button" class=
+"button operator" value="+" onclick="v('+')">
+</p>
+<p>
+<input type="button" class=
+"button operator" value="0" onclick="v('0')">
+
+<input type="button" class=
+"button operator" value="." onclick="v('.')">
+
+<input type="button" class=
+"button operator" value="C" onclick="v('C')">
+
+<input type="button" class=
+"button operator" value="=" onclick="v('/=)">
+</p>
+</div>
+</div>
 </body>
 </html>
