edit button operator
made a π

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-<div class="box">
+<div class="box ">
 <div class="display"><input type="
 text" readonly size= "18" id= "d"></div>
 <div class="keys">
 <p>
 <input type="button" class=
-"button operator" value="mrc" onclick="alert(' Not yet implemented')">
+"button operator" value="π" onclick="v('3.14159265')">
 
 <input type="button" class=
 "button operator" value="m-" onclick="alert('Not yet implemented')">
@@ -22,6 +22,8 @@ text" readonly size= "18" id= "d"></div>
 <input type="button" class=
 "button operator" value="m+" onclick="alert('Not yet implemented')">
 
+<input type="button" class=
+"button function" value="/" onclick="v('/')">
 
 </p>
 <p>
@@ -71,10 +73,10 @@ text" readonly size= "18" id= "d"></div>
 "button operator" value="." onclick="v('.')">
 
 <input type="button" class=
-"button operator" value="C" onclick="v('C')">
+"button operator" value="C" onclick="d('')">
 
 <input type="button" class=
-"button operator" value="=" onclick="v('/=)">
+"button operator" value="=" onclick="e()">
 </p>
 </div>
 </div>
