--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@ text" readonly size= "18" id= "d"></div>
 "button operator" value="8" onclick="v('8')">
 
 <input type="button" class=
-"button operator" value="9" onclick="v('9')">
-
+"button operator" value="6" onClick="v('6')">
 <input type="button" class=
-"button operator" value="*" onclick="v('*')">
+"button operator" value="9" onclick="v('9')">
 </p>
 <p>
 <input type="button" class=
@@ -45,12 +44,10 @@ text" readonly size= "18" id= "d"></div>
 
 <input type="button" class=
 "button operator" value="5" onclick="v('5')">
-
-<input type="button" class=
-"button operator" value="6" onclick="v('6')">
-
 <input type="button" class=
 "button operator" value="-" onclick="v('-')">
+<input type="button" class=
+"button operator" value="*" onClick="v('*')">
 </p>
 <p>
 <input type="button" class=
