--- a/index.html
+++ b/index.html
@@ -14,66 +14,66 @@ text" readonly size= "18" id= "d"></div>
 <div class="keys">
 <p>
 <input type="button" class=
-"button operator" value="π" onclick="v('3.14159265')">
+"button" value="π" onclick="v('3.14159265')">
 
 <input type="button" class=
-"button operator" value="m-" onclick="alert('Not yet implemented')">
+"button" value="m-" onclick="alert('Not yet implemented')">
 
 <input type="button" class=
-"button operator" value="m+" onclick="alert('Not yet implemented')">
+"button" value="m+" onclick="alert('Not yet implemented')">
 
 <input type="button" class=
-"button function" value="/" onclick="v('/')">
+"button" value="/" onclick="v('/')">
 
 </p>
 <p>
 <input type="button" class=
-"button number" value="7" onclick= "v('7')">
+"button" value="7" onclick= "v('7')">
 
 <input type="button" class=
-"button operator" value="8" onclick="v('8')">
+"button" value="8" onclick="v('8')">
 
 <input type="button" class=
-"button operator" value="6" onClick="v('6')">
+"button" value="6" onClick="v('6')">
 <input type="button" class=
-"button operator" value="9" onclick="v('9')">
+"button" value="9" onclick="v('9')">
 </p>
 <p>
 <input type="button" class=
-"button operator" value="4" onclick="v('4)'">
+"button" value="4" onclick="v('4)'">
 
 <input type="button" class=
-"button operator" value="5" onclick="v('5')">
+"button" value="5" onclick="v('5')">
 <input type="button" class=
-"button operator" value="-" onclick="v('-')">
+"button" value="-" onclick="v('-')">
 <input type="button" class=
-"button operator" value="*" onClick="v('*')">
+"button" value="*" onClick="v('*')">
 </p>
 <p>
 <input type="button" class=
-"button operator" value="1" onclick="v('1')">
+"button" value="1" onclick="v('1')">
 
 <input type="button" class=
-"button operator" value="2" onclick="v('2')">
+"button" value="2" onclick="v('2')">
 
 <input type="button" class=
-"button operator" value="3" onclick="v('3')">
+"button" value="3" onclick="v('3')">
 
 <input type="button" class=
-"button operator" value="+" onclick="v('+')">
+"button" value="+" onclick="v('+')">
 </p>
 <p>
 <input type="button" class=
-"button operator" value="0" onclick="v('0')">
+"button" value="0" onclick="v('0')">
 
 <input type="button" class=
-"button operator" value="." onclick="v('.')">
+"button" value="." onclick="v('.')">
 
 <input type="button" class=
-"button operator" value="C" onclick="d('')">
+"button" value="C" onclick="d('')">
 
 <input type="button" class=
-"button operator" value="=" onclick="e()">
+"button" value="=" onclick="e()">
 </p>
 </div>
 </div>
