--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ text" readonly size= "18" id= "d"></div>
 "button" value="π" onclick="v('3.14159265')">
 
 <input type="button" class=
-"button" value="m-" onclick="alert('Not yet implemented')">
+"button" value="(" onclick="v(' ( ')">
 
 <input type="button" class=
-"button" value="m+" onclick="alert('Not yet implemented')">
+"button" value=")" onclick="v(' ) ')">
 
 <input type="button" class=
 "button" value="/" onclick="v('/')">
@@ -75,6 +75,8 @@ text" readonly size= "18" id= "d"></div>
 <input type="button" class=
 "button" value="=" onclick="e()">
 </p>
+<button onClick
+
 </div>
 </div>
 </body>
