night mode, and gif
tried out night mode, and added a gif

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@ text" readonly size= "18" id= "d"></div>
 <input type="button" class=
 "button" value="=" onclick="e()">
 </p>
-<button onClick
+<button onClick =
+"toggleNightMode()" id=
+togBut>Toggle Night MOde</button>
 
 </div>
 </div>
