added new paragraph tag
added new paragraph tag.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ text" readonly size= "18" id= "d"></div>
 <input type="button" class=
 "button" value="=" onclick="e()">
 </p>
+<p> Hi This is my calculator!</p>
 </div>
 </div>
 </body>
